@@ -8,6 +8,7 @@ EmrEtlRunner: <<< >>>
 Redshift: table-def script bumped to 0.2.0
 Redshift: migration script added for 0.1.0 to 0.2.0
 Redshift: added geo-ip fields to Redshift table definition (#226)
+Redshift: rename ev_ fields to se_ for structured events (#227)
 
 <<< >>>
 
